Change some phrases on front page to german and add more latex files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 *-blx.aux
 *-blx.bib
 *.run.xml
+
+## Build tool auxiliary files:
+*.fdb_latexmk
+*.synctex
+*.synctex(busy)
+*.synctex.gz
+*.synctex.gz(busy)
+*.pdfsync
