Add explanations to transformation matrix handling

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,6 @@ java_skeleton_generation/.idea/
 java_skeleton_generation/out/
 java_skeleton_generation/*.obj
 
+
+### Ipe ###
+*-eps-converted-to.pdf
