Render some examples with environment map

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,6 @@ java_skeleton_generation/*.obj
 ### temporary PCA visualization exports ###
 PCA/temporary_visualization_exports/*
 
+### skeleton meta data files ###
+java_skeleton_generation/skeletonMetaData*
+
